# scan_mi

./: README.md
scan_mi_util/: mi_util.cpp  mi_util.h
scan_simple_mi_varz/: trans_base
scan_simple_mi_varz/src/: CMakeLists.txt  main.cpp  mi_cost.cu  mi_cost.h  mi_optimize.cpp  mi_optimize.h
scan_simple_mi_varz/src/cmake/Modules/: FindCUDA.cmake
src/: CMakeLists.txt  CMakeLists.txt~  main.cpp  mi_cost.cpp  mi_cost.h  mi_optimize.cpp  mi_plotter.cpp  mi_plotter.h  mi_util.cpp  mi_util.h
